worked on small headings for Products and fixed side scrolling bug

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,9 +3,11 @@
 */
 
 html, body {
-    height: 100%;
+    min-height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 * {
@@ -46,6 +48,12 @@ html, body, svg {
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.1;
     font-weight: 500;
+}
+
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+    font-size: .65em;
+    color: #777;
+    line-height: 1;
 }
 
 h1, h2, h3 {
@@ -352,6 +360,10 @@ main section:nth-child(even) {
     color: white;
 }
 
+main section:nth-child(even) small {
+    color: #DDD;
+}
+
 section.img-text-pair, section.product {
     justify-content: flex-start;
     flex-wrap: nowrap;
@@ -390,7 +402,7 @@ section.gallery, section.team {
     flex-wrap: wrap;
 }
 
-section.product > h1, section.gallery > h1 {
+section.product > h2, section.gallery > h1 {
     flex-basis: 100%;
     text-align: center;
 
